# LogicWriting

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  README.md  README.zh-CN.md  pyproject.toml
.flowguard/: project.toml  run_models.py
.flowguard/behavior_commitment_ledger/: ledger.json  run_checks.py
.flowguard/development_process_flow/: model.py
.flowguard/model_test_alignment/: model.py  run_checks.py
.flowguard/models/: __init__.py  common.py  fiction_route_model.py  frozen_source_contract_exhaustion.py  known_bad.py  logic_writing_lifecycle.py  operation_freshness_closure_model.py  plans.py  reader_artifact_model.py  release_retirement_model.py  research_packet_model.py  retirement_field_lifecycle.py  route_and_guard_model.py  travel_route_model.py
.flowguard/plan_detailing/: model.py  run_checks.py
.logicguard/: readme-capability-model.yaml
.skillguard/: author-project.json  project.json
docs/: architecture.md  release-retirement-checklist.md  responsibility-map.md  source-reconciliation.json
openspec/: verification-contract.yaml
scripts/: _release_common.py  check_global_routing.py  check_installation_parity.py  check_installed_routes.py  check_privacy.py  check_public_docs.py  check_reader_judgment.py  check_release_surface.py  check_researchguard_topology.py  check_retirement_residuals.py  check_skillguard_authority.py  check_source_reconciliation.py  prepare_reader_quality_receipt.py  run_fiction_regression.py  run_frozen_validation.py  run_travel_regression.py  validate_skill.py  verify_skill_suite_markers.py
tests/: __init__.py  conftest.py  support.py
(+399 files in other folders)
