[project]
name = "logic-writing-skill"
version = "2.1.2"
description = "One Codex skill for investigation, academic writing, fiction, and evidence-heavy travel guides"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yingxu Liu" }]
keywords = ["codex", "research", "academic-writing", "fiction-writing", "travel-guide", "logic", "evidence"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/liuyingxuvka/LogicWriting"
Repository = "https://github.com/liuyingxuvka/LogicWriting"
Issues = "https://github.com/liuyingxuvka/LogicWriting/issues"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
python_files = ["test_*.py"]
